<resources>
    <string name="app_name">Find My Series</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">Mirzapur is an action crime thriller web television series on Amazon Prime Video produced by Excel Entertainment. The series is primarily shot in Mirzapur, with some shots in Jaunpur, Azamgarh, Ghazipur, Lucknow, Raebareli, Gorakhpur and Varanasi. It revolves around drugs, guns, murders and lawlessness.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register_now">Don\'t have an account? Register now</string>
    <string name="write_your_review">Write your review</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="rate_app_title">Rate app</string>
    <string name="rate_app_message">If you are enjoying our app</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">Remind me later</string>
    <string name="rate_btn_nut">No, Thanks</string>

    <string name="default_notification_channel_id">FindMySeries_NotificationID</string>

    <string-array name="Reviews">
        <item>App review</item>
        <item>User review</item>
        <item>Imdb review</item>
    </string-array>

</resources>