<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginActivity"
    android:background="@color/background_black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/circularbordersolid">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/textColor_grey"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_user"
            app:hintTextAppearance="@color/textColor_grey"
            android:textColorHint="@color/textColor_grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_UserEmail"
                android:hint="@string/email_address"
                android:textSize="15sp"
                android:textColor="@color/textColor_grey"
                android:fontFamily="@font/montserrat_medium"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:singleLine="true"
                android:theme="@style/MyEditTextTheme"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key"
            app:hintTextAppearance="@color/textColor_grey"
            android:textColorHint="@color/textColor_grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="15sp"
                android:textColor="@color/textColor_grey"
                android:id="@+id/et_UserPassword"
                android:fontFamily="@font/montserrat_medium"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:theme="@style/MyEditTextTheme"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:layout_gravity="right"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor_grey"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/textColor_grey"
            android:ems="10"
            android:background="@drawable/login_button_background"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account_register_now"
            android:textSize="12sp"
            android:id="@+id/tv_goToRegister"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="@color/textColor_grey"/>
    </LinearLayout>

<!--    <com.wang.avi.AVLoadingIndicatorView-->
<!--        android:id="@+id/avi"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/AVLoadingIndicatorView"-->
<!--        android:visibility="invisible"-->
<!--        app:indicatorName="BallPulseIndicator"-->
<!--        app:indicatorColor="@color/duskYellow"-->
<!--        android:layout_centerInParent="true"-->
<!--        />-->




</RelativeLayout>