<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.ForgotPasswordActivity"
    android:background="@color/background_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/circularbordersolid">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/textColor_grey"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_user"
            app:hintTextAppearance="@color/textColor_grey"
            android:textColorHint="@color/textColor_grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_ForgotUserEmail"
                android:hint="@string/email_address"
                android:textSize="15sp"
                android:textColor="@color/textColor_grey"
                android:fontFamily="@font/montserrat_medium"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:singleLine="true"
                android:theme="@style/MyEditTextTheme"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:id="@+id/btn_forgotPassword"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/textColor_grey"
            android:ems="10"
            android:background="@drawable/login_button_background"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>


</RelativeLayout>